Fixes spacing around the top navbar icons
[Fixes: #116146181]

--- a/src/components/navbar/Navbar.sass
+++ b/src/components/navbar/Navbar.sass
@@ -69,11 +69,11 @@
   .isLoggedIn .NavbarLink[href^="/notifications"]
     position: absolute
     top: rem(-30)
-    left: rem(20)
+    left: rem(28)
   .isLoggedIn .NavbarLink[href="/search"]
     position: absolute
     top: rem(-30)
-    left: rem(50)
+    left: rem(60)
 
 @media(min-width: #{$break-2})
   .Navbar
